# arrayfire-py

./: .flake8  .gitignore  .isort.cfg  MANIFEST.in  Makefile  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
array_api/: __init__.py  _array_object.py  _constants.py  _creation_function.py  _data_type_functions.py  _dtypes.py  _elementwise_functions.py  _indexing_functions.py  _manipulation_functions.py  _searching_functions.py  _set_functions.py  _sorting_functions.py  _statistical_functions.py
array_api/tests/: fixme_test_creation_functions.py  fixme_test_elementwise_functions.py
array_api/tests-fixme/: fixme_test_array_object.py
arrayfire/: __init__.py  _array_helpers.py  array_object.py  config.py  dtypes.py  logger.py  platform.py  version.py
arrayfire/array/: __init__.py  array_object.py
arrayfire/array_api/: __init__.py  _array_object.py  _constants.py  _creation_function.py  _data_type_functions.py  _dtypes.py  _elementwise_functions.py  _indexing_functions.py  _manipulation_functions.py  _searching_functions.py  _set_functions.py  _sorting_functions.py  _statistical_functions.py  _utility_functions.py  array_object.py  constants.py  creation_function.py  data_type_functions.py  dtypes.py
arrayfire/array_api/tests/: fixme_test_array_object.py  fixme_test_elementwise_functions.py  test_creation_functions.py  test_elementwise_functions.py
arrayfire/backend/: __init__.py  _backend.py  _backend_functions.py  api.py  backend.py  config.py  constants.py  helpers.py  operators.py  wrapped.py
arrayfire/backend/_clib_wrapper/: __init__.py  _base.py  _constant_array.py  _error_handler.py  _indexing.py  _operators.py  _random.py  _reduction_operations.py  _unsorted.py
arrayfire/backend/c_backend/: constant_array.py  error_handler.py  indexing.py  operators.py  reduction_operations.py  unsorted.py
arrayfire/backend/c_library/: __init__.py  constant_array.py  error_handler.py  indexing.py  operators.py  reduction_operations.py  unsorted.py
arrayfire/backend/wrapped/: _indexing.py  constant_array.py  constants.py  everything.py  indexing.py  operators.py  reduction_operations.py
arrayfire/dtypes/: __init__.py  functions.py  helpers.py
examples/: helloworld.py
examples/array_api/: helloworld.py
examples/benchmarks/: bench_blas.py  bench_cg.py  bench_fft.py  monte_carlo_pi.py
examples/common/: idxio.py
examples/computer_vision/: fast.py  harris.py  matching.py  susan.py
examples/financial/: black_scholes_options.py  heston_model.py  monte_carlo_options.py
examples/getting_started/: convolve.py  intro.py
examples/lin_algebra/: cholesky.py  lu.py  qr.py
examples/linear_algebra/: cholesky.py  lu.py  qr.py
examples/machine_learning/: logistic_regression.py  mnist_common.py
tests/: _helpers.py  test_data.py  test_dtypes.py  test_operators.py  test_random.py  test_version.py  wip_test_data.py
tests/array_management/: test_array_creation.py  test_array_modification.py
tests/array_object/: test_initialization.py  test_methods.py  test_operator_overrides.py  test_operators.py
tests/test_library/: test_array_functions.py  test_linear_algebra.py  test_mathematical_functions.py  test_operators.py  test_random.py  test_vector_algorithms.py
tests/vector_algorithms/: test_inclusive_scan_operations.py  test_reduction_operations.py
