[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arrayfire"
dynamic = ["version"]
dependencies = ["arrayfire-binary-python-wrapper == 0.7.0+af3.9.0"]
requires-python = ">=3.10"
description = "ArrayFire Python"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [{ name = "ArrayFire", email = "technical@arrayfire.com" }]
keywords = [
  "arrayfire",
  "parallel computing",
  "high performance computing",
  "hpc",
  "gpu",
  "cpu",
  "opencl",
  "cuda",
  "oneapi",
  "python",
  "wrapper",
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "http://arrayfire.com"
"General Documentation" = "https://arrayfire.org/docs/index.htm"

[project.entry-points.array_api]
array_api = "arrayfire.array_api"

[project.optional-dependencies]
dev = [
  "flake8~=7.0.0",
  "mypy~=1.9.0",
  "isort>=5.13.2",
  "black>=24.4.0",
  "pytest-cov>=5.0.0",
  "coverage[toml]>=6.4",
  "codecov>=2.1.12",
]

[tool.setuptools.dynamic]
version = { attr = "arrayfire.__version__" }

[tool.black]
line-length = 119

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
line_length = 119
profile = "black"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true

exclude = ".venv"
