[metadata]
name = arrayfire
description = ArrayFire Python Wrapper
licence = BSD
long_description = file: README.md
long_description_content_type = text/markdown
author = ArrayFire
author_email = technical@arrayfire.com
url = http://arrayfire.com
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries
keywords =
    arrayfire parallel computing gpu cpu opencl

[options]
packages = find:
install_requires =
    scikit-build
python_requires =
    >=3.8.0

[options.packages.find]
include = arrayfire
exclude =
    examples
    tests
install_requires =
    numpy~=1.22.0

[options.extras_require]
dev =
    autopep8~=1.6.0
    isort~=5.10.1
    flake8~=4.0.1
    flake8-quotes~=3.2.0
    mypy~=1.3.0
test =
    pytest~=7.1.2
    pytest-cov~=3.0.0
    pytest-isort~=3.0.0
    pytest-flake8~=1.1.1
    pytest-mypy~=0.3.0

[tool:isort]
line_length = 119
multi_line_output = 4

[tool:pytest]
addopts = --cache-clear --cov=arrayfire --flake8 --isort -s
console_output_style = classic
markers = mypy

[flake8]
exclude = venv
application-import-names = arrayfire
import-order-style = pep8
inline-quotes = double
max-line-length = 119

[mypy]
exclude = venv
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true